[package]
name = "ultra-fast-platform-ai-mbu"
version = "0.1.0"
edition = "2021"
description = "High-performance microservice for AI infrastructure"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
